--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build -p 3008",
-    "dev": "next dev",
+    "build": "next build",
+    "dev": "next dev -p 3008",
     "lint": "next lint",
     "start": "next start"
   },
