--- a/azure-pipelines/azure-pipelines.yml
+++ b/azure-pipelines/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
     displayName: 'Configurar Yarn'
 
   - script: |
-      yarn install --frozen-lockfile
+      yarn install --immutable
     displayName: 'Instalar dependências'
 
   - script: |
@@ -29,3 +29,4 @@ steps:
   - script: |
       yarn test
     displayName: 'Rodar testes'
+
