Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines/azure-pipelines.yml
+++ b/azure-pipelines/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
     displayName: 'Configurar Yarn'
 
   - script: |
-      yarn install --immutable
+      yarn install
     displayName: 'Instalar dependências'
 
   - script: |
