--- a/azure-pipelines/azure-pipelines.yml
+++ b/azure-pipelines/azure-pipelines.yml
@@ -1,30 +1,74 @@
 trigger:
   branches:
     include:
-      - main 
+      - main
+      - develop
+      - hmg
 
 pool:
   name: Azure Pipelines
   demands: npm
 
-steps:
-- task: Npm@1
-  displayName: 'npm install'
-  inputs:
-    verbose: false
+variables:
+  # Resource Group
+  resourceGroup: 'app-opalbytes_group'
+  
+  # App Service names (ajuste conforme seus nomes reais)
+  appServiceMain: 'app-opalbytes-prod'
+  appServiceDevelop: 'app-opalbytes-dev'
+  appServiceHmg: 'app-opalbytes-hmg'
 
-- task: Npm@1
-  displayName: 'npm run build'
-  inputs:
-    command: custom
-    verbose: false
-    customCommand: 'run build'
+stages:
+- stage: Build
+  displayName: 'Build Stage'
+  jobs:
+  - job: BuildJob
+    displayName: 'Build'
+    steps:
+    - task: Npm@1
+      displayName: 'npm install'
+      inputs:
+        verbose: false
 
-- task: PublishBuildArtifacts@1
-  displayName: 'Publish Artifact: drop'
-  inputs:
-    PathtoPublish: '.next'
+    - task: Npm@1
+      displayName: 'npm run build'
+      inputs:
+        command: custom
+        verbose: false
+        customCommand: 'run build'
+
+    - task: PublishBuildArtifacts@1
+      displayName: 'Publish Artifact: drop'
+      inputs:
+        PathtoPublish: '.next'
+        ArtifactName: 'drop'
 
 
+- stage: DeployProduction
+  displayName: 'Deploy to Production'
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
+  dependsOn: Build
+  jobs:
+  - deployment: DeployToProd
+    displayName: 'Deploy to Production Environment'
+    environment: 'production'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: DownloadBuildArtifacts@1
+            displayName: 'Download Build Artifacts'
+            inputs:
+              buildType: 'current'
+              downloadType: 'single'
+              artifactName: 'drop'
+              downloadPath: '$(System.ArtifactsDirectory)'
 
-
+          - task: AzureWebApp@1
+            displayName: 'Deploy to Production'
+            inputs:
+              azureSubscription: '0ff1e022-43f9-45fb-bd18-22eecfcb5fef'
+              appType: 'webApp'
+              resourceGroupName: '$(resourceGroup)'
+              package: '$(System.ArtifactsDirectory)/drop'
+              deploymentMethod: 'auto'
