--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev -p 3008",
+    "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
@@ -46,7 +46,7 @@
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "^15.2.4",
     "next-themes": "^0.4.6",
     "react": "^19",
     "react-day-picker": "9.8.0",
