--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "node server.js"
-  },
-    "engines": {
-    "node": "20.19.4",
-    "npm": "10.8.2"
+    "start": "next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
